# rust-browserchecks

./: Cargo.toml  README.md  bfp.json  docker-compose.yml  main.rs
javascript/: main.js
migrations/2022-12-29-191549_create_bfp/: down.sql  up.sql
src/: main.rs  schema.rs
src/data/: README.md  models.rs  query.rs  schema.rs
src/views/: mod.rs  path.rs
src/views/app/: content_loader.rs  items.rs  mod.rs
src/views/auth/: mod.rs  signup.rs
src/views/bfp/: add.rs  mod.rs  show.rs  utils.rs
src/views/comments/: comments.rs  new_comment.rs
templates/: main.html
