[package]
name = "actix-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "*"
actix-web = "4"
actix-session = { version = "0.7.2", features = ["cookie-session"] }
serde_json = "*"
serde = "1"
serde_derive = "*"
md-5 = "0.10.5"